# dicom-viewer

./: .gitignore  AGENTS.md  README.md
.github/workflows/: backend-quality.yml
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py  schemas.py
backend/app/api/: router.py
backend/app/api/routes/: analysis.py  config.py  health.py  studies.py
backend/app/services/: dicom_catalog.py
backend/tests/: test_sample_viewer_api.py
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/components/: CornerstoneViewport.tsx
frontend/src/data/: demo.ts
frontend/src/lib/: api.ts  cornerstoneViewer.ts
specs/001-backend-ruff-linter/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-backend-ruff-linter/checklists/: requirements.md
specs/001-backend-ruff-linter/contracts/: backend-lint-workflow.md
specs/002-cornerstone-basic-viewer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-cornerstone-basic-viewer/checklists/: requirements.md
specs/002-cornerstone-basic-viewer/contracts/: sample-series-viewport.md
