[project]
name = "dicom-viewer-backend"
version = "0.1.0"
description = "API and DICOM utilities for the viewer"
readme = "../README.md"
authors = [
    {name = "shochmuth",email = "skyler.hochmuth@live.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydicom (>=3.0.1,<4.0.0)",
    "pydantic (>=2.0.0,<3.0.0)",
    "pynetdicom (>=3.0.4,<4.0.0)",
    "numpy (>=2.3.2,<3.0.0)"
]

[tool.poetry]
packages = [{ include = "app" }]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.10"
mypy = "^1.17.1"
pytest = "^9.0.3"
httpx = "^0.28.1"

[tool.ruff]
target-version = "py312"
src = ["app"]
extend-exclude = ["sample_dicom"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
